crates/atlas-runtime/tests/errors/invalid_escape.atl
// Test: Invalid escape sequence (AT1003)
let path = "C:\path\to\file";
